--- a/CookieClicker/wwwroot/css/site.css
+++ b/CookieClicker/wwwroot/css/site.css
@@ -26,7 +26,23 @@ body {
     color: white;
 }
 
+#container {
+    position: relative;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 #counter {
-    margin-top: 5rem;
-    margin-left: 20rem;
+    font-size: 2rem;
+    font-weight: 700;
+}
+
+#cookie {
+    margin-top: 2rem;
+    width: 200px; /* Adjust the width as needed */
+    height: 200px; /* Adjust the height as needed */
+    object-fit: contain;
 }
